Prepared for deploy

--- a/projects/vix/index.html
+++ b/projects/vix/index.html
@@ -20,16 +20,22 @@
     </header>
     <main class="container">
       <div>
-        <h2>Hello. Call me vixalien.</h2>
-        <p>I'm <strong>Shema Angelo</strong>, but call me <strong>vixalien</strong>.</p>
-        <p>My name is vixalien, I am a multi-purpose software man.</p>
-        <p>I practice many disciplines: </p>
-        <ul>
-          <li>Web design</li>
-          <li>Web programming with Rails</li>
-          <li>Some low-level programming</li>
-        </ul>
-        <p>Plus, I make some <a href="/projects" class="internal-link">projects</a> from time to time although they are not well documented.</p>
+        <h2><a href="https://vixdesign.github.io" class="internal-link">Vix Design.</a></h2>
+        <p>Vix is a design language.</p>
+        <p>It helps you design your web apps, It's easy and reliable.</p>
+        <p>Vix is special, in it's ways. It doesn't define everything for you, like Bootstrap. It only provide the fundamentals, It's up to you to extend them.</p>
+        <h3>Installing</h3>
+        <p>If you use to use an unofficial CDN, put this in your html.</p>
+        <code lang="css">
+          &lt;link rel="stylesheet" type="text/css" href="http://vixdesign.github.io/css/raw/bundles/ui.bundle.css"&gt;
+          &lt;script type="text/javascript" src="http://vixdesign.github.io/js/bundle.js"&gt;&lt;/script&gt;
+        </code>
+        <p>However, it is stronly recommended that you build Vix yourself.</p>
+        <h3>Building</h3>
+        <p>Checkout vix's repo on github</p>
+        <code lang="bash">
+            git clone https://github.com/vixalien/vixdesign.github.io
+        </code>
       </div>
     </main>
     <footer class="container">
