Fixed manifest stuff, added maths joke

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <!-- Include the bundle -->
     <link rel="stylesheet" href="/css/raw/bundles/omni.bundle.css">
 
+    <!-- manifest -->
+    <link rel="manifest" href="manifest.json">
+    <!-- pwa -->
+    <meta name='mobile-web-app-capable' content='yes'>
+    <meta name='apple-mobile-web-app-capable' content='yes'>
+    <meta name='apple-mobile-web-app-status-bar-style' content='transparent'>
+    <link rel="serviceworker" href="/sw.js">
+
     <script type="text/javascript" src="/js/bundle.js" defer></script>
     <script type="text/javascript" src="/js/app.js" defer></script>
 
@@ -21,6 +29,9 @@
     <main class="container" style="font-size: 1em">
       <div>
         <h2>Hello. Call me vixalien.</h2>
+        <hr>
+        <h3>There are 10 types of people, those who understand binary and those who don't</h3>
+        <hr>
         <p>I'm <strong>Shema Angelo</strong>, but call me <strong>vixalien</strong>.</p>
         <p>I am a multi-purpose software man.</p>
         <p>I've been in computer since I was 5. </p>
