Added SVGs and their relative PNGs and messed up with installability

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
     <!-- manifest -->
     <link rel="manifest" href="manifest.json">
+
+    <!-- shortcut icon -->
+    <link rel="shortcut icon" type="image/svg" href="/img/icons/icon-full.svg">
+
     <!-- pwa -->
     <meta name='mobile-web-app-capable' content='yes'>
     <meta name='apple-mobile-web-app-capable' content='yes'>
     <meta name='apple-mobile-web-app-status-bar-style' content='transparent'>
-    <link rel="serviceworker" href="/sw.js">
+    <link rel="serviceworker" href="sw.js">
 
     <script type="text/javascript" src="/js/bundle.js" defer></script>
     <script type="text/javascript" src="/js/app.js" defer></script>
