Switched to louis.css

--- a/projects/vix/index.html
+++ b/projects/vix/index.html
@@ -11,7 +11,7 @@
     <script src="/js/hljs/highlight.pack.js"></script>
 
     <!-- Include the bundle -->
-    <link rel="stylesheet" href="/css/raw/bundles/omni.bundle.css">
+    <link rel="stylesheet" href="/css/body.css">
 
     <script type="text/javascript" src="/js/bundle.js" defer></script>
     <script type="text/javascript" src="/js/app.js" defer></script>
