--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- Include the bundle -->
-    <link rel="stylesheet" href="/css/raw/bundles/omni.bundle.css">
+    <link rel="stylesheet" href="/css/body.css">
 
     <!-- manifest -->
     <link rel="manifest" href="manifest.json">
@@ -35,14 +35,16 @@
   </head>
   <body>
     <header class="container" >
-      <h1 class=""><a href="/" class="internal-link special">Vixalien</a></h1>  <div id="load"></div>
+      <h1 class=""><a href="/" class="internal-link special">vixalien</a></h1>  <div id="load"></div>
     </header>
     <main class="container" style="font-size: 1em">
       <div>
         <h2>Hello. Call me vixalien.</h2>
-        <hr>
-        <h3>There are 10 types of people, those who understand binary and those who don't</h3>
-        <hr>
+        <blockquote>
+          <h3>
+            There are 10 types of people, those who understand binary and those who don't
+          </h3>
+        </blockquote>
         <p>I'm <strong>Shema Angelo</strong>, but call me <strong>vixalien</strong>.</p>
         <p>I am a multi-purpose software man.</p>
         <p>I've been in computer since I was 5. </p>
@@ -82,8 +84,7 @@
             <li><a href="/personal/contact" class="internal-link">Contact me</a></li>
           </ul>
           <ul class="menu">
-            <h3>vixalien</h3>
-            <div id="hello"><kbd>&lt;&gt;</kbd> with ♥ by 👽.</div>
+            <h3><kbd>&lt;&gt;</kbd> with ♥ by 👽.</h3>
             <li><a href="https://www.github.com/vixalien">Github</a></li>
             <li><a href="https://www.twitter.com/vixalien">Twitter</a></li>
           </ul>
@@ -92,7 +93,7 @@
       <div class="flex">
         <div class="flex">
           <ul class="menu">
-            <h3>Famous <a class="special" href="#next" id="next">Next &gt;</a></h3>
+            <h3>Famous <a class="special" href="#next" id="next">Next</a></h3>
             <div><a class="special" href="#hint" id="hint">Need a Hint?</a> <span><span id="score">0</span> Points</span></div>
             <div class="guess" id="cards">
               <span>Loading. If you have a crap browser or some error occurred, this will never load.</span>
